--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="css/main.css">
+        <title>Tehillah the tech guy</title>
+       
+    </head>
+    <body>
+        <header></header>
+		    <a href="#"></a>
+			    <div class="web-logo">
+                    <img src="../pictures/logo.png">
+			    </div>
+            </a>
+        
+            <h1>Tehillah The Tech Guy</h1>
+            <div class="nav-bar">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About me</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="container">
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCQjlT1Wd1-hHffG_2lhSYCA/videos">Youtube (programming tutorials)</a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/c/tehillahkangamba/videos">Youtube (personal channel)</a>
+                </li>
+                <li>
+                    <a href="#">my music</a>
+                </li>
+            </ul>
+        </div>
+    <footer>
+        <div class="social-media">
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="#">Instagram</a>
+        </div>
+    </footer>
+    </body>
+</html>
