--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
         
             <h2>Tehillah The TechGuy</h1>
             <p>Web Developer ,Youtube personality & Rapper</p>
-           
+           <div class="nav-bar">
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="index.html">content</a>
+                        </li>
+                        <li>
+                            <a href="#">About me</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <div class="container">
             <ul>
